--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,7 @@
     <li class="c8">harmony</li>
     <li class="c9">island</li>
     <li class="c10">journey</li>
+    <li class="c10">journey</li>
   </ol>
 </body>
 </html>
