--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,33 @@
     <li class="c8">harmony</li>
     <li class="c9">island</li>
     <li class="c10">journey</li>
-    <li class="c10">journey</li>
+    <li class="c10">【発明の詳細な説明】
+【技術分野】
+【０００１】
+  本発明は、モータ制御方法及びモータ制御装置に関する。
+【背景技術】
+【０００２】
+  特許文献１には、電動車両に搭載されたバッテリの暖機の要否を判断し、
+  暖気が必要と判断された場合には、モータ駆動をベクトル制御にて行い、
+  モータに流す電流値を増加させることでバッテリを昇温させる技術が開示されている。
+【先行技術文献】
+【特許文献】
+【０００３】
+【特許文献１】 特開２０１２－１６５５２６号公報
+【発明の概要】
+【発明が解決しようとする課題】
+【０００４】
+  上述した従来技術では、電動車両の停止中（モータの回転の停止中）において
+  バッテリ温度に応じてｄ軸電流を増大させると、モータの特定の相のステータコイルに
+  大きな電流が流れ続けてしまうことがある。その結果、特定の相のステータコイルの
+  温度のみが上昇して過熱状態となるおそれがある。そこで、特定の相への熱集中を回避するために
+  目標熱量（暖機目標電流の大きさ）を維持しつつ電流位相を変化させる手法を採用することも考えられる。
+  しかしながら、この場合、意図しないモータトルクの変動が発生して駆動力伝達系の捩じり共振の影響で
+  振動を誘発するおそれがある。
+【０００５】
+  本発明は、電動車両の停止中に暖気制御を実行する場合に、モータにおける過熱状態の発生を低減させ、
+  かつ、駆動力伝達系の捩じり振動の発生を抑制することを目的とする。    
+    </li>
   </ol>
 </body>
 </html>
